TEST_PROGRAMS/typing_benchmarks/invalid/return1.go
package main

func an_int() int {
	// Return expression is not an int
	return
}
